objects/ASI_TnE_Cash_Advance_Pre_Approval__c.object
<CustomObject>
    <description>Pre-approval for Cash Advance:
- PR SG
- PR TH
- PR KH   ** new 6 Feb 2018</description>
    <fields>
        <fullName>ASI_TnE_Claim_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Travel &amp; Entertainment Claim</label>
        <referenceTo>ASI_TnE_ClaimHeader__c</referenceTo>
        <relationshipName>Cash_Advance_Pre_approval</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Company__c</fullName>
        <formula>IF(
   ISBLANK(ASI_TnE_Requested_Employee__c),
   Owner:User.ASI_Company_Name__c,
   ASI_TnE_Requested_Employee__r.ASI_Company_Name__c 
)</formula>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Country_of_Travel__c</fullName>
        <label>Country of Travel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Department_Division__c</fullName>
        <formula>IF(
   ISBLANK(ASI_TnE_Requested_Employee__c),
   Owner:User.ASI_Department__c,
   ASI_TnE_Requested_Employee__r.ASI_Department__c
)</formula>
        <label>Department/Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_FX_Rate__c</fullName>
        <label>FX Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_No_of_Person_Travel__c</fullName>
        <label>No. of Person Travel</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Reason_for_Cash_Advance__c</fullName>
        <label>Reason for Cash Advance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Requested_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cash_Advance_Pre_Approval</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Required_Amount__c</fullName>
        <label>Required Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Required_Currency__c</fullName>
        <label>Required Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>IDR</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>KRW</fullName>
                </value>
                <value>
                    <fullName>MYR</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>THB</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>VND</fullName>
                </value>
                <value>
                    <fullName>TWD</fullName>
                </value>
                <value>
                    <fullName>KHR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_Sys_Allow_Submit_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys_Allow Submit Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Sys_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys_Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cash_Advance_Pre_Approval1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Sys_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys_Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cash_Advance_Pre_Approval2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Sys_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys_Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cash_Advance_Pre_Approval3</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Cash Advance Pre-Approval</label>
    <listViews>
        <fullName>ASI_TnE_SG_All_Cash_Advance_Pre_approval</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_TnE_Status__c</columns>
        <columns>ASI_TnE_Required_Currency__c</columns>
        <columns>ASI_TnE_Required_Amount__c</columns>
        <columns>ASI_TnE_Reason_for_Cash_Advance__c</columns>
        <columns>ASI_TnE_Country_of_Travel__c</columns>
        <columns>ASI_TnE_No_of_Person_Travel__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Cash_Advance_Pre_Approval__c.ASI_TnE_SG_Cash_Advance_Pre_approval</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Cash_Advance_Pre_Approval__c.ASI_TnE_SG_Cash_Advance_Pre_approval_Read_Only</value>
        </filters>
        <label>All SG Cash Advance Pre-approval</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_SG_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_TH_All_Cash_Advance_Pre_approval</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_TnE_Status__c</columns>
        <columns>ASI_TnE_Required_Currency__c</columns>
        <columns>ASI_TnE_Required_Amount__c</columns>
        <columns>ASI_TnE_Reason_for_Cash_Advance__c</columns>
        <columns>ASI_TnE_Country_of_Travel__c</columns>
        <columns>ASI_TnE_No_of_Person_Travel__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ASI_TnE_Claim_Header__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Cash_Advance_Pre_Approval__c.ASI_TnE_TH_Cash_Advance_Pre_approval</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Cash_Advance_Pre_Approval__c.ASI_TnE_TH_Cash_Advance_Pre_approval_Read_Only</value>
        </filters>
        <label>All TH Cash Advance Pre-approval</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_TH_All_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CAQ-{000000}</displayFormat>
        <label>Cash Advance Pre-approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash Advance Pre-Approval</pluralLabel>
    <recordTypes>
        <fullName>ASI_TnE_KH_Cash_Advance_Pre_approval</fullName>
        <active>true</active>
        <label>ASI TnE KH Cash Advance Pre-approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_KH_Cash_Advance_Pre_approval_Read_Only</fullName>
        <active>true</active>
        <label>ASI TnE KH Cash Advance Pre-approval  Read-Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_SG_Cash_Advance_Pre_approval</fullName>
        <active>true</active>
        <label>ASI TnE SG Cash Advance Pre-approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_SG_Cash_Advance_Pre_approval_Read_Only</fullName>
        <active>true</active>
        <label>ASI TnE SG Cash Advance Pre-approval Read-Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_TH_Cash_Advance_Pre_approval</fullName>
        <active>true</active>
        <label>ASI TnE TH Cash Advance Pre-approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_TH_Cash_Advance_Pre_approval_Read_Only</fullName>
        <active>true</active>
        <label>ASI TnE TH Cash Advance Pre-approval Read-Only</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>ASI_TnE_CashAdv_Change_Manager_Access__c</fullName>
        <label>Change Manager Access</label>
    </sharingReasons>
</CustomObject>